[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/PNG/sprites/enemy-death/enemy-death-2.png" type="Texture" id=1]
[ext_resource path="res://Assets/PNG/sprites/enemy-death/enemy-death-6.png" type="Texture" id=2]
[ext_resource path="res://Assets/PNG/sprites/enemy-death/enemy-death-5.png" type="Texture" id=3]
[ext_resource path="res://Assets/PNG/sprites/enemy-death/enemy-death-4.png" type="Texture" id=4]
[ext_resource path="res://Assets/PNG/sprites/enemy-death/enemy-death-1.png" type="Texture" id=5]
[ext_resource path="res://Assets/PNG/sprites/enemy-death/enemy-death-3.png" type="Texture" id=6]
[ext_resource path="res://Assets/PNG/sprites/opossum/opossum-5.png" type="Texture" id=7]
[ext_resource path="res://Assets/PNG/sprites/opossum/opossum-4.png" type="Texture" id=8]
[ext_resource path="res://Assets/PNG/sprites/opossum/opossum-6.png" type="Texture" id=9]
[ext_resource path="res://Assets/PNG/sprites/opossum/opossum-1.png" type="Texture" id=10]
[ext_resource path="res://Enemy1.gd" type="Script" id=11]
[ext_resource path="res://Assets/PNG/sprites/opossum/opossum-2.png" type="Texture" id=12]
[ext_resource path="res://Assets/PNG/sprites/opossum/opossum-3.png" type="Texture" id=13]
[ext_resource path="res://Assets/sounds/Explosion1.wav" type="AudioStream" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.4611, 22.2342 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "death",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "mouse",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31.442, 3.18999 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 41.2531, 18.4608 )

[node name="Mouse" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -10.6147, 17.9123 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.663422, 0 )
scale = Vector2( 3, 3 )
frames = SubResource( 2 )
animation = "mouse"
frame = 2
playing = true

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 43 )
collision_mask = 2

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2( -10.6147, -8.67908 )
shape = SubResource( 3 )

[node name="SideChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideChecker"]
position = Vector2( -10.6147, 17.9123 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SoundDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -16.692
pitch_scale = 1.2
[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
[connection signal="body_entered" from="SideChecker" to="." method="_on_SideChecker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
